--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_ID=your_api_id
-API_HASH=your_api_hash
-BOT_TOKEN=your_bot_token
+API_ID=28094744
+API_HASH=a75af4285edc7747c57bb19147ca0b9b
+BOT_TOKEN=7965713049:AAFqnovjaXZEsEdgHLG7YEL_o-dYjsmU4s8
 FORCE_SUB_CHANNEL=https://t.me/+MnxII-5_qqY5ZjE1
