--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-FORCE_SUB_CHANNEL=
+API_ID=28094744
+API_HASH=a75af4285edc7747c57bb19147ca0b9b
+BOT_TOKEN=7965713049:AAFqnovjaXZEsEdgHLG7YEL_o-dYjsmU4s8
+FORCE_SUB_CHANNEL=https://t.me/+MnxII-5_qqY5ZjE1
